findbugs Long.valueOf.  Netbeans suggestions
svn path=/dasCore/community/autoplot2011/trunk/; revision=7493